# MesoCal

./: .gitignore  README.md  macro2.mesocal.json  pyproject.toml
docs/: sample.mesocal.json
src/base/: __init__.py  core.py
